...
          backgroundColor: Colors.transparent,
          title: const Text('Albums'),
          actions: [
            IconButton(
                onPressed: () async {
                  getAlbums();
                  final result = await context.push('/add_album');
                  if (result != null) {
                    getAlbums();
                  }
                },
                icon: const Icon(Icons.add))
          ]),
...
